modified category cursors, HS dividers & img1

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,7 +59,7 @@ main {
   padding: 8px 16px;
   color: black;
   text-decoration: none;
-  cursor: pointer;
+  cursor: default;
 }
 
 .category-section div .arrow:hover {
