--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -140,7 +140,6 @@ main {
 }
 
 .product-card .card-image {
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -180,4 +179,29 @@ main {
   padding: 4px;
   top: 50px;
   right: 1px;
+}
+
+/* Carousel */
+
+.carousel-custom .carousel-indicators [data-bs-target] {
+  border-top: 0;
+  border-bottom: 0;
+}
+
+.carousel-custom .carousel-indicators {
+  bottom: -17px;
+}
+
+.carousel-custom .carousel-indicators button {
+  background-color: rgb(51, 51, 51, 1)!important;
+  border-radius: 50%;
+  margin-right: 6px;
+  height: 6px;
+  width: 6px;
+  z-index: 2;
+}
+
+.carousel-custom .carousel-indicators .active {
+  box-shadow: 0px 0px 10px 4px rgba(199, 199, 199);
+  background-color: rgba(250, 250, 250, 0.2)!important;
 }
