--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 main {
   min-height: 80vh;
+  font-family: Arial, sans-serif;
 }
 
 /* Profile screen */
@@ -43,7 +44,6 @@ main {
 
 .category-section {
   display: flex;
-  font-family: Arial, sans-serif;
   width: 100%;
 }
 
@@ -204,4 +204,21 @@ main {
 .carousel-custom .carousel-indicators .active {
   box-shadow: 0px 0px 10px 4px rgba(199, 199, 199);
   background-color: rgba(250, 250, 250, 0.2)!important;
+}
+
+/* Selling Categories */
+
+.selling-categories {
+  display: flex;
+  width: 100%;
+}
+
+.selling-categories div :hover {
+  background-color: #eee;
+  cursor: pointer;
+}
+
+.selling-categories .sub-category :hover {
+  background-color: #eee;
+  cursor: pointer;
 }
