--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -222,3 +222,34 @@ main {
   background-color: #eee;
   cursor: pointer;
 }
+
+/* Login Screen */
+
+.kpx_loginOr {
+	position: relative;
+	color: #aaa;
+	padding-top: 0.2em;
+}
+
+.kpx_loginOr div .kpx_hrOr {
+	background-color: #cdcdcd;
+	height: 1px;
+	margin-top: 0px !important;
+	margin-bottom: 0px !important;
+}
+
+.kpx_loginOr .kpx_spanOr {
+	display: block;
+	position: absolute;
+	left: 50%;
+	top: -0.6em;
+	margin-left: -1.5em;
+	background-color: white;
+	width: 3em;
+	text-align: center;
+}
+
+.social-button {
+  width: 5em!important;
+  height: 5em!important;
+}
